--- a/script 2.ipynb
+++ b/script 2.ipynb
@@ -171,6 +171,291 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 539 entries, 0 to 538\n",
+      "Data columns (total 27 columns):\n",
+      " #   Column                           Non-Null Count  Dtype  \n",
+      "---  ------                           --------------  -----  \n",
+      " 0   disc_number                      539 non-null    int64  \n",
+      " 1   duration_ms                      539 non-null    int64  \n",
+      " 2   explicit                         539 non-null    object \n",
+      " 3   track_number                     539 non-null    int64  \n",
+      " 4   track_popularity                 539 non-null    int64  \n",
+      " 5   track_id                         535 non-null    object \n",
+      " 6   track_name                       536 non-null    object \n",
+      " 7   audio_features.danceability      538 non-null    object \n",
+      " 8   audio_features.energy            537 non-null    float64\n",
+      " 9   audio_features.key               538 non-null    float64\n",
+      " 10  audio_features.loudness          537 non-null    float64\n",
+      " 11  audio_features.mode              539 non-null    int64  \n",
+      " 12  audio_features.speechiness       538 non-null    float64\n",
+      " 13  audio_features.acousticness      539 non-null    object \n",
+      " 14  audio_features.instrumentalness  539 non-null    object \n",
+      " 15  audio_features.liveness          538 non-null    float64\n",
+      " 16  audio_features.valence           539 non-null    float64\n",
+      " 17  audio_features.tempo             539 non-null    object \n",
+      " 18  audio_features.id                539 non-null    object \n",
+      " 19  audio_features.time_signature    538 non-null    float64\n",
+      " 20  artist_id                        539 non-null    object \n",
+      " 21  artist_name                      539 non-null    object \n",
+      " 22  artist_popularity                539 non-null    int64  \n",
+      " 23  album_id                         539 non-null    object \n",
+      " 24  album_name                       493 non-null    object \n",
+      " 25  album_release_date               539 non-null    object \n",
+      " 26  album_total_tracks               539 non-null    object \n",
+      "dtypes: float64(7), int64(6), object(14)\n",
+      "memory usage: 113.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>disc_number</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>track_number</th>\n",
+       "      <th>track_popularity</th>\n",
+       "      <th>audio_features.energy</th>\n",
+       "      <th>audio_features.key</th>\n",
+       "      <th>audio_features.loudness</th>\n",
+       "      <th>audio_features.mode</th>\n",
+       "      <th>audio_features.speechiness</th>\n",
+       "      <th>audio_features.liveness</th>\n",
+       "      <th>audio_features.valence</th>\n",
+       "      <th>audio_features.time_signature</th>\n",
+       "      <th>artist_popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>537.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>537.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>539.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>539.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.031540</td>\n",
+       "      <td>236003.725417</td>\n",
+       "      <td>11.280148</td>\n",
+       "      <td>62.918367</td>\n",
+       "      <td>0.573065</td>\n",
+       "      <td>4.587361</td>\n",
+       "      <td>-7.520639</td>\n",
+       "      <td>0.912801</td>\n",
+       "      <td>0.057709</td>\n",
+       "      <td>0.163308</td>\n",
+       "      <td>0.398410</td>\n",
+       "      <td>3.986989</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.174934</td>\n",
+       "      <td>55019.871010</td>\n",
+       "      <td>7.965621</td>\n",
+       "      <td>22.498757</td>\n",
+       "      <td>0.192309</td>\n",
+       "      <td>3.246082</td>\n",
+       "      <td>2.933158</td>\n",
+       "      <td>0.282388</td>\n",
+       "      <td>0.073146</td>\n",
+       "      <td>0.141800</td>\n",
+       "      <td>0.199409</td>\n",
+       "      <td>0.197323</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-223093.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-92.000000</td>\n",
+       "      <td>0.118000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-17.932000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.023100</td>\n",
+       "      <td>0.033500</td>\n",
+       "      <td>0.037400</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>209486.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>0.436000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-9.287000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.030525</td>\n",
+       "      <td>0.096500</td>\n",
+       "      <td>0.230000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>233626.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>0.589000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-6.942000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.037750</td>\n",
+       "      <td>0.115000</td>\n",
+       "      <td>0.386000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>259045.500000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>0.729000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>-5.376000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.056400</td>\n",
+       "      <td>0.162250</td>\n",
+       "      <td>0.535000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>613026.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>152.000000</td>\n",
+       "      <td>0.949000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>-1.909000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.912000</td>\n",
+       "      <td>0.931000</td>\n",
+       "      <td>0.943000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       disc_number    duration_ms  track_number  track_popularity  \\\n",
+       "count   539.000000     539.000000    539.000000        539.000000   \n",
+       "mean      1.031540  236003.725417     11.280148         62.918367   \n",
+       "std       0.174934   55019.871010      7.965621         22.498757   \n",
+       "min       1.000000 -223093.000000      1.000000        -92.000000   \n",
+       "25%       1.000000  209486.500000      5.000000         51.000000   \n",
+       "50%       1.000000  233626.000000     10.000000         69.000000   \n",
+       "75%       1.000000  259045.500000     15.000000         77.000000   \n",
+       "max       2.000000  613026.000000     46.000000        152.000000   \n",
+       "\n",
+       "       audio_features.energy  audio_features.key  audio_features.loudness  \\\n",
+       "count             537.000000          538.000000               537.000000   \n",
+       "mean                0.573065            4.587361                -7.520639   \n",
+       "std                 0.192309            3.246082                 2.933158   \n",
+       "min                 0.118000            0.000000               -17.932000   \n",
+       "25%                 0.436000            2.000000                -9.287000   \n",
+       "50%                 0.589000            5.000000                -6.942000   \n",
+       "75%                 0.729000            7.000000                -5.376000   \n",
+       "max                 0.949000           11.000000                -1.909000   \n",
+       "\n",
+       "       audio_features.mode  audio_features.speechiness  \\\n",
+       "count           539.000000                  538.000000   \n",
+       "mean              0.912801                    0.057709   \n",
+       "std               0.282388                    0.073146   \n",
+       "min               0.000000                    0.023100   \n",
+       "25%               1.000000                    0.030525   \n",
+       "50%               1.000000                    0.037750   \n",
+       "75%               1.000000                    0.056400   \n",
+       "max               1.000000                    0.912000   \n",
+       "\n",
+       "       audio_features.liveness  audio_features.valence  \\\n",
+       "count               538.000000              539.000000   \n",
+       "mean                  0.163308                0.398410   \n",
+       "std                   0.141800                0.199409   \n",
+       "min                   0.033500                0.037400   \n",
+       "25%                   0.096500                0.230000   \n",
+       "50%                   0.115000                0.386000   \n",
+       "75%                   0.162250                0.535000   \n",
+       "max                   0.931000                0.943000   \n",
+       "\n",
+       "       audio_features.time_signature  artist_popularity  \n",
+       "count                     538.000000              539.0  \n",
+       "mean                        3.986989              120.0  \n",
+       "std                         0.197323                0.0  \n",
+       "min                         3.000000              120.0  \n",
+       "25%                         4.000000              120.0  \n",
+       "50%                         4.000000              120.0  \n",
+       "75%                         4.000000              120.0  \n",
+       "max                         5.000000              120.0  "
+      ]
+     },
+     "execution_count": 399,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 381,
    "metadata": {},
    "outputs": [
