update diccionario de datos

--- a/Engineering scritp.ipynb
+++ b/Engineering scritp.ipynb
@@ -2503,8 +2503,15 @@
     "\n",
     "En la columna explicit el tipo de dato es boleano pero hay datos de tipo character eg. no\n",
     "\n",
-    "Album taylor swift release date 1989"
+    "Album taylor swift release date 1989 erroneus\n",
+    "\n",
+    "audio_features.id and and track_id is the same type of data, veryfy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
