--- a/script 2.ipynb
+++ b/script 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>audio_features.id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4WUepByoeqcedHoYhSNHRt</td>\n",
+       "      <td>4WUepByoeqcedHoYhSNHRt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0108kcWLnn2HlH2kedi1gn</td>\n",
+       "      <td>0108kcWLnn2HlH2kedi1gn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3Vpk1hfMAQme8VJ0SNRSkd</td>\n",
+       "      <td>3Vpk1hfMAQme8VJ0SNRSkd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1OcSfkeCg9hRC2sFKB4IMJ</td>\n",
+       "      <td>1OcSfkeCg9hRC2sFKB4IMJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2k0ZEeAqzvYMcx9Qt5aClQ</td>\n",
+       "      <td>2k0ZEeAqzvYMcx9Qt5aClQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>534</th>\n",
+       "      <td>1j6gmK6u4WNI33lMZ8dC1s</td>\n",
+       "      <td>1j6gmK6u4WNI33lMZ8dC1s</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>535</th>\n",
+       "      <td>7CzxXgQXurKZCyHz9ufbo1</td>\n",
+       "      <td>7CzxXgQXurKZCyHz9ufbo1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>536</th>\n",
+       "      <td>1k3PzDNjg38cWqOvL4M9vq</td>\n",
+       "      <td>1k3PzDNjg38cWqOvL4M9vq</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537</th>\n",
+       "      <td>0YgHuReCSPwTXYny7isLja</td>\n",
+       "      <td>0YgHuReCSPwTXYny7isLja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>1hxLyjC9D9Jpw6EAPKqWv4</td>\n",
+       "      <td>1hxLyjC9D9Jpw6EAPKqWv4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>539 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   track_id       audio_features.id\n",
+       "0    4WUepByoeqcedHoYhSNHRt  4WUepByoeqcedHoYhSNHRt\n",
+       "1    0108kcWLnn2HlH2kedi1gn  0108kcWLnn2HlH2kedi1gn\n",
+       "2    3Vpk1hfMAQme8VJ0SNRSkd  3Vpk1hfMAQme8VJ0SNRSkd\n",
+       "3    1OcSfkeCg9hRC2sFKB4IMJ  1OcSfkeCg9hRC2sFKB4IMJ\n",
+       "4    2k0ZEeAqzvYMcx9Qt5aClQ  2k0ZEeAqzvYMcx9Qt5aClQ\n",
+       "..                      ...                     ...\n",
+       "534  1j6gmK6u4WNI33lMZ8dC1s  1j6gmK6u4WNI33lMZ8dC1s\n",
+       "535  7CzxXgQXurKZCyHz9ufbo1  7CzxXgQXurKZCyHz9ufbo1\n",
+       "536  1k3PzDNjg38cWqOvL4M9vq  1k3PzDNjg38cWqOvL4M9vq\n",
+       "537  0YgHuReCSPwTXYny7isLja  0YgHuReCSPwTXYny7isLja\n",
+       "538  1hxLyjC9D9Jpw6EAPKqWv4  1hxLyjC9D9Jpw6EAPKqWv4\n",
+       "\n",
+       "[539 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['track_id', 'audio_features.id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +562,7 @@
        "max                         5.000000              120.0  "
       ]
      },
-     "execution_count": 399,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +985,7 @@
        "[521 rows x 27 columns]"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2289,7 @@
        "[25 rows x 25 columns]"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
